update the showcase project

--- a/.env
+++ b/.env
@@ -5,17 +5,15 @@ CHROME_EXECUTABLE_PATH=/home/pptruser/.cache/puppeteer/chrome/linux-132.0.6834.1
 #CHROME_EXECUTABLE_PATH=google-chrome-stable
 
 #example_website config
-example_website_USERNAME=mark@freedomlend.com.au
-example_website_PASSWORD=vwq!cbr0YWG2fnb!bqz
+example_website_USERNAME=xxxxxx
+example_website_PASSWORD=xxxxxxxx
 
 #projection_rule_path
 EXCEL_PROJECTIOIN_RULE_PATH=/home/pptruser/app/projection-rule.json
 
 #WP config
-#WP_USERNAME=rzhang
-#WP_PASSWORD=Zhang123..
-WP_USERNAME=rzhang
-WP_PASSWORD=Zhang123.
+WP_USERNAME=xxxxxx
+WP_PASSWORD=xxxxxxxx
 
 
 #CSV download path
